# kls

./: .gdbinit  .gitmodules  .luarc.json  Cargo.toml  Makefile  NOTES.md  README.md  build.rs  justfile
crates/parser/: Cargo.toml
crates/parser/src/: ast_util.rs  lib.rs  node.rs
crates/parser/templates/: node.rs
crates/parser2/: Cargo.toml
crates/parser2/src/: ast_util.rs  grammar.rs  lexer.rs  lib.rs  marker.rs  node.rs  node_helper.rs  parse_event.rs  parser.rs  parser_api.rs  tree_builder.rs
crates/parser2/src/grammar/: source_file_rule.rs  top_level_statement.rs
crates/parser2/tests/: parse_package_test.rs
crates/parser2/tests/common/: mod.rs
crates/parser2/tests/testdata/: new_package.golden  update_package_ident.golden
crates/server/: Cargo.toml  build.rs
crates/server/src/: buffer.rs  error_util.rs  indexes.rs  kserver.rs  lib.rs  parse_kotlin.rs  project.rs  range_util.rs  request_handler.rs  scope.rs  scope_builder.rs  scope_error.rs  scopes.rs  symbol.rs
crates/server/src/project/: kls_test_project.rs
crates/server/src/request_handler/: did_change_text_document_handler.rs  print_scopes_handler.rs
crates/server/src/scope/: debug_print.rs  file_scope.rs  file_scope_creation.rs  fun_decl_scope.rs  project_scope.rs  source_set_scope.rs
crates/server/src/scope_builder/: function_declaration.rs  package_header.rs
crates/server/src/visit/: visit_class.rs  visit_package_header.rs  visit_source_file.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: lib.rs  prelude.rs  result_util.rs  text_range.rs  with_tr.rs
crates/testing/: Cargo.toml
crates/testing/src/: completion.rs  lib.rs  workspace.rs
crates/tycheck/: Cargo.toml
crates/tycheck/src/: lib.rs
integration_tests/: edit_ast_spec.lua  edit_ast_spec_golden.toml  edit_buffer_spec.lua  edit_buffer_spec_golden.toml  edit_package_header_spec.lua  edit_package_header_spec_golden.toml  edit_simple_function_spec.lua  edit_simple_function_spec_golden.toml  example_spec.lua  init_spec.lua  init_spec_golden.toml  run_tests.vim  testrc.vim
old_crates/parser/: Cargo.toml  build.rs
old_crates/parser/src/: node.rs
old_crates/parser/templates/: node.rs
old_crates/server/: Cargo.toml
old_crates/server/src/: buffer.rs  completion.rs  kserver.rs  lib.rs  scopes.rs  visit.rs
old_crates/server/src/visit/: visit_class.rs
old_tests/: completion_class.rs  completion_package.rs  did_change_notification.rs  did_change_notification_index_update.rs
src/: kserver.rs  lib.rs  main.rs  stdx.rs
tests/: completion.rs  completion_class.rs  completion_package.rs  did_change_notification.rs  did_change_notification_index_update.rs  server_init.rs
