[package]
name = "kls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]


[workspace.dependencies]
server = {path = "crates/server", version = "0.1"}
testing = {path = "crates/testing", version = "0.1"}
stdx = {path = "crates/stdx", version = "0.1"}
parser = {path= "crates/parser", version = "0.1"}

parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tower-lsp = {version = "0.20.0", features = ["proposed"]}
tree-sitter = "0.20.10"
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.4.0"
qp-trie = "0.8.1"

[dependencies]
tracing-subscriber.workspace = true

server.workspace = true

tracing.workspace = true
tokio.workspace = true
tower-lsp.workspace = true

[dev-dependencies]
assert_cmd = "2.0.12"
testing = { version = "0.1.0", path = "crates/testing" }
