[package]
name = "kls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]


[workspace.dependencies]
server = {path = "crates/server", version = "0.1"}
testing = {path = "crates/testing", version = "0.1"}
stdx = {path = "crates/stdx", version = "0.1"}
parser = {path= "crates/parser", version = "0.1"}
tycheck = {path= "crates/tycheck", version = "0.1"}

anyhow = "1.0.75"
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
tower-lsp = {version = "0.20.0", features = ["proposed"]}
tree-sitter = "0.20.10"
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.4.0"
qp-trie = "0.8.1"

lazy_static = "1.4.0"
derive-new = "0.5.9"
smallvec = "1.11.1"
crop = "0.3.0"

[dependencies]
tracing-appender.workspace = true
tracing-subscriber.workspace = true

server.workspace = true

tracing.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
pico-args = {version = "0.5.0", features = ["eq-separator"]}

[dev-dependencies]
assert_cmd = "2.0.12"
testing = { version = "0.1.0", path = "crates/testing" }
assertables = "7.0.1"
