[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp.workspace = true
tree-sitter.workspace = true
stdx.workspace = true

tracing.workspace= true
tokio.workspace = true
parking_lot.workspace = true
qp-trie.workspace = true
walkdir.workspace = true

[build-dependencies]
cc="*"
