[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp.workspace = true
tree-sitter.workspace = true
parser.workspace = true
stdx.workspace = true

tracing.workspace= true
tokio.workspace = true
parking_lot.workspace = true
qp-trie.workspace = true
walkdir.workspace = true

derive-new.workspace = true
smallvec.workspace = true
crop.workspace = true
anyhow = "1.0.75"
tap = "1.0.1"
lazy_static = "1.4.0"

[build-dependencies]
cc="*"
