[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp.workspace = true
tree-sitter.workspace = true
parser.workspace = true
tycheck.workspace = true
stdx.workspace = true

tracing.workspace= true
tokio.workspace = true
parking_lot.workspace = true
qp-trie.workspace = true
walkdir.workspace = true

derive-new.workspace = true
smallvec.workspace = true
crop.workspace = true
lazy_static.workspace = true
anyhow = "1.0.75"
tap = "1.0.1"
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
merged_range = {path = "/Users/leonhard.kipp/repos/merged_range", version = "0.1.0"}
ranges = "0.3.3"
once_cell = "1.18.0"
atree = "0.5.2"
