[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter.workspace = true
stdx.workspace = true
tracing.workspace = true
derive-new.workspace = true
crop.workspace = true
lazy_static.workspace = true

[build-dependencies]
cc="*"
serde = {version= "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tera = "1.19.1"
tera-text-filters = "1.0.0"
